<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_closet"
        android:title="@string/menu_closet"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_services"
        android:title="@string/menu_services"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:title="@string/menu_restore"
        app:showAsAction="never" />
</menu>
